cli/tests/snapshots/integration__run_images@text2.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="108.0" height="20.0" xmlns="http://www.w3.org/2000/svg">
  <text dominant-baseline="alphabetic" text-anchor="start" x="0.0" y="0.0" font-family="sans-serif" font-size="20.0" font-style="normal" font-weight="bold" transform="translate(54.0,10.0) rotate(0.0 0.0 0.0) scale(1.0,1.0)" fill="rgba(255, 0, 0, 1.0)" >Bold text</text>
</svg>
