cli/tests/snapshots/integration__run_images@text4.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="108.0" height="18.0" xmlns="http://www.w3.org/2000/svg">
  <text dominant-baseline="alphabetic" text-anchor="start" x="-54.0" y="5.4" font-family="sans-serif" font-size="18.0" font-style="normal" font-weight="normal" text-decoration="underline" transform="translate(54.0,9.0) rotate(0.0 0.0 0.0) scale(1.0,1.0)" fill="rgba(0, 128, 0, 1.0)" >Underlined</text>
</svg>
