cli/tests/snapshots/integration__run_images@text5.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="303.0" height="24.0" xmlns="http://www.w3.org/2000/svg">
  <text dominant-baseline="alphabetic" text-anchor="start" x="0.0" y="0.0" font-family="sans-serif" font-size="24.0" font-style="italic" font-weight="bold" text-decoration="underline" transform="translate(151.2,12.0) rotate(0.0 0.0 0.0) scale(1.0,1.0)" fill="rgba(0, 0, 0, 1.0)" >Bold Italic Underline</text>
</svg>
