cli/tests/snapshots/integration__run_images@triangle_aas1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="200.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 200.0 0.0 L 165.270364 29.141624 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
