cli/tests/snapshots/integration__run_images@triangle_asa1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="197.0" height="35.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 167.819926 0.0 L 196.961551 34.729636 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
