cli/tests/snapshots/integration__run_images@triangle_saa1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="99.0" height="18.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 14.570812 0.0 L 98.480775 0.0 L 0.0 17.364818 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
