cli/tests/snapshots/integration__run_images@triangle_sas1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="100.0" height="11.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 100.0 0.0 L 40.911535 10.418891 Z" fill="rgba(46, 139, 87, 1.0)" />
</svg>
